fixing message footer on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -102,7 +102,7 @@ ul {
 
   display: flex;
   padding: 0;
-  height: 100vh;
+  height: calc(100vh - 59px);
   margin: 0;
   border-radius: 0;
   overflow: hidden;
